# AI-Nikki

./: .gitignore  README.md  REVIEW.md  plan.md  pyproject.toml
ai_nikki/: cli.py  config.py  day_materials.py  db.py  importers.py  personas.py  post_validator.py  reports.py  soul_analysis.py  util.py  writer_prompt.py
config/: ai-nikki-personas.template.md  ai-nikki.json
docs/: diary-writer-workflow-implementation-plan.md
scripts/: run-daily.cmd  run-daily.ps1
skills/ai-nikki-daily-ingest/: SKILL.md
skills/ai-nikki-daily-missing-diaries/: SKILL.md
skills/ai-nikki-historical-diary-generation/: SKILL.md
skills/ai-nikki-historical-ingest/: SKILL.md
skills/ai-nikki-persona-setup/: SKILL.md
skills/soul-analysis-workflow/: SKILL.md
tests/: test_ai_nikki.py
